fixed flatten results to correctly flatten the datasets

--- a/results/ResultsAnalysis.ipynb
+++ b/results/ResultsAnalysis.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
+    "from typing import List, Optional\n",
+    "import ast\n",
     "\n",
     "from results_processing import get_groups, get_dataset, flatten_results"
    ],
@@ -32,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "lcn_data = pd.read_csv('LcnTotalResults.csv')\n",
@@ -50,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "regression_cat_groups = data_groups['opml_reg_numcat_group']\n",
@@ -71,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "lcn_reg = get_dataset(lcn_data, regression_groups)\n",
@@ -84,6 +86,79 @@
     "\n",
     "reg_datasets = pd.concat([lcn_reg, mlp_reg, multi_reg], ignore_index=True)\n",
     "cls_datasets = pd.concat([lcn_cls, mlp_cls, multi_cls], ignore_index=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [],
+   "source": [
+    "reg_results = flatten_results(reg_datasets, ['metrics'])\n",
+    "cls_results = flatten_results(cls_datasets, ['metrics'])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['dataset', 'hyperparameters', 'model', 'train_loss', 'epoch',\n       'val_loss', 'test_loss', 'epoch_time', 'train_metrics.RMSE',\n       'train_metrics.r2_score', 'train_metrics.se_quant', 'val_metrics.RMSE',\n       'val_metrics.r2_score', 'val_metrics.se_quant', 'test_metrics.RMSE',\n       'test_metrics.r2_score', 'test_metrics.se_quant',\n       'validate_metrics.r2_score', 'validate_metrics.RMSE',\n       'validate_metrics.se_quant'],\n      dtype='object')"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "reg_results.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Index(['dataset', 'hyperparameters', 'model', 'train_loss', 'val_loss',\n       'test_loss', 'epoch', 'epoch_time', 'train_metrics.accuracy_score',\n       'train_metrics.roc_auc_score', 'train_metrics.confusion_matrix',\n       'val_metrics.accuracy_score', 'val_metrics.roc_auc_score',\n       'val_metrics.confusion_matrix', 'test_metrics.accuracy_score',\n       'test_metrics.roc_auc_score', 'test_metrics.confusion_matrix',\n       'validate_metrics.accuracy_score', 'validate_metrics.confusion_matrix',\n       'validate_metrics.roc_auc_score'],\n      dtype='object')"
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cls_results.columns"
    ],
    "metadata": {
     "collapsed": false,
