--- a/results/ResultsAnalysis.ipynb
+++ b/results/ResultsAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -11,7 +11,7 @@
     "from typing import List, Optional\n",
     "import ast\n",
     "\n",
-    "from results_processing import get_groups, get_dataset, flatten_results"
+    "from results_processing import get_groups, get_dataset, flatten_results, get_top_models"
    ],
    "metadata": {
     "collapsed": false,
@@ -96,19 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "reg_results = flatten_results(reg_datasets, ['metrics'])\n",
@@ -123,19 +111,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "outputs": [
     {
-     "data": {
-      "text/plain": "Index(['dataset', 'hyperparameters', 'model', 'train_loss', 'epoch',\n       'val_loss', 'test_loss', 'epoch_time', 'train_metrics.RMSE',\n       'train_metrics.r2_score', 'train_metrics.se_quant', 'val_metrics.RMSE',\n       'val_metrics.r2_score', 'val_metrics.se_quant', 'test_metrics.RMSE',\n       'test_metrics.r2_score', 'test_metrics.se_quant',\n       'validate_metrics.r2_score', 'validate_metrics.RMSE',\n       'validate_metrics.se_quant'],\n      dtype='object')"
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['dataset', 'hyperparameters', 'model', 'train_loss', 'epoch',\n",
+      "       'val_loss', 'test_loss', 'epoch_time', 'train_metrics.RMSE',\n",
+      "       'train_metrics.r2_score', 'train_metrics.se_quant', 'val_metrics.RMSE',\n",
+      "       'val_metrics.r2_score', 'val_metrics.se_quant', 'test_metrics.RMSE',\n",
+      "       'test_metrics.r2_score', 'test_metrics.se_quant',\n",
+      "       'validate_metrics.r2_score', 'validate_metrics.RMSE',\n",
+      "       'validate_metrics.se_quant'],\n",
+      "      dtype='object')\n",
+      "Index(['dataset', 'hyperparameters', 'model', 'train_loss', 'val_loss',\n",
+      "       'test_loss', 'epoch', 'epoch_time', 'train_metrics.accuracy_score',\n",
+      "       'train_metrics.roc_auc_score', 'train_metrics.confusion_matrix',\n",
+      "       'val_metrics.accuracy_score', 'val_metrics.roc_auc_score',\n",
+      "       'val_metrics.confusion_matrix', 'test_metrics.accuracy_score',\n",
+      "       'test_metrics.roc_auc_score', 'test_metrics.confusion_matrix',\n",
+      "       'validate_metrics.accuracy_score', 'validate_metrics.confusion_matrix',\n",
+      "       'validate_metrics.roc_auc_score'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
-    "reg_results.columns"
+    "print(reg_results.columns)\n",
+    "print(cls_results.columns)"
    ],
    "metadata": {
     "collapsed": false,
@@ -145,25 +149,14 @@
    }
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Index(['dataset', 'hyperparameters', 'model', 'train_loss', 'val_loss',\n       'test_loss', 'epoch', 'epoch_time', 'train_metrics.accuracy_score',\n       'train_metrics.roc_auc_score', 'train_metrics.confusion_matrix',\n       'val_metrics.accuracy_score', 'val_metrics.roc_auc_score',\n       'val_metrics.confusion_matrix', 'test_metrics.accuracy_score',\n       'test_metrics.roc_auc_score', 'test_metrics.confusion_matrix',\n       'validate_metrics.accuracy_score', 'validate_metrics.confusion_matrix',\n       'validate_metrics.roc_auc_score'],\n      dtype='object')"
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
    "source": [
-    "cls_results.columns"
+    "# 2. Analyzing results"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%% md\n"
     }
    }
   },
