--- a/results/ResultsAnalysis.ipynb
+++ b/results/ResultsAnalysis.ipynb
@@ -14,7 +14,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "from results_processing import get_groups, get_dataset, flatten_results, get_top_models, plot_per_model_metrics, clean_model_names, pivot_per_dataset, plot_per_datasets"
+    "from results_processing import get_groups, get_dataset, flatten_results, get_top_models, plot_per_model_metrics, clean_model_names, pivot_per_dataset, plot_per_datasets, create_formatted_df"
    ],
    "metadata": {
     "collapsed": false,
@@ -246,39 +246,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "def plot_per_model_metrics(df, metric, jitter=False):\n",
-    "    # Create the plot\n",
-    "    sns.stripplot(data=df, x='model', y=metric, hue='model', jitter=jitter, dodge=True)\n",
-    "\n",
-    "    # Add labels and title\n",
-    "    plt.xlabel('Model')\n",
-    "    plt.ylabel(metric)\n",
-    "    plt.title(f'{metric} by Model')\n",
-    "\n",
-    "    # Rotate x-axis labels for better visibility\n",
-    "    plt.xticks(rotation=45)\n",
-    "\n",
-    "    # Set the Y-axis limits\n",
-    "    plt.ylim([0, 1])\n",
-    "\n",
-    "    # Add a legend\n",
-    "    plt.legend(title='Model', bbox_to_anchor=(1.05, 1), loc='upper left')\n",
-    "\n",
-    "    # Show the plot\n",
-    "    plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "outputs": [
     {
@@ -329,74 +296,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "def pivot_per_dataset(df: pd.DataFrame, results_column: str) -> pd.DataFrame:\n",
-    "    # Create a pivot table with lists\n",
-    "    pivot_df = pd.pivot_table(df,\n",
-    "                              values=results_column,\n",
-    "                              index='model',\n",
-    "                              columns='dataset',\n",
-    "                              aggfunc=list,\n",
-    "                              fill_value=None)\n",
-    "\n",
-    "    # Flatten the columns and reset index\n",
-    "    pivot_df.columns = [col if not isinstance(col, tuple) else '_'.join(col) for col in pivot_df.columns]\n",
-    "    pivot_df.reset_index(inplace=True)\n",
-    "\n",
-    "    # Explode lists into separate rows\n",
-    "    for col in pivot_df.columns[1:]:\n",
-    "        pivot_df = pivot_df.explode(col)\n",
-    "\n",
-    "    # Reset the index to keep things tidy\n",
-    "    pivot_df.reset_index(drop=True, inplace=True)\n",
-    "\n",
-    "    return pivot_df\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
     "top_acc_per_dataset = pivot_per_dataset(top_acc_score, 'test_metrics.accuracy_score')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "outputs": [],
-   "source": [
-    "def plot_per_datasets(df: pd.DataFrame, datasets: List[str], scale: bool = False) -> None:\n",
-    "    # Melt the DataFrame for seaborn\n",
-    "    melted_df = df.melt(id_vars='model', value_vars=datasets)\n",
-    "\n",
-    "    # Create the plot\n",
-    "    plt.figure(figsize=(12, 8))\n",
-    "    sns.stripplot(x='model', y='value', hue='variable', data=melted_df, jitter=False, dodge=False)\n",
-    "\n",
-    "    plt.xlabel('Model')\n",
-    "    plt.ylabel('Metric Value')\n",
-    "    plt.legend(title='Dataset')\n",
-    "\n",
-    "    # Scale Y-axis\n",
-    "    if scale:\n",
-    "        plt.ylim(0, 1)\n",
-    "\n",
-    "    # Rotate X-axis labels for better visibility\n",
-    "    plt.xticks(rotation=90)\n",
-    "\n",
-    "    plt.show()"
    ],
    "metadata": {
     "collapsed": false,
@@ -421,31 +321,6 @@
    ],
    "source": [
     "top_acc_per_dataset.head(7)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "outputs": [],
-   "source": [
-    "def create_formatted_df(df: pd.DataFrame, highest: bool = True) -> pd.DataFrame:\n",
-    "    new_df = {}\n",
-    "\n",
-    "    for col in df.columns[1:]:  # Skip the 'model' column\n",
-    "        # Create a list of formatted strings \"ModelName(Value)\" sorted by value\n",
-    "        sorted_series = df[[col, 'model']].sort_values(by=col, ascending=not highest)\n",
-    "        formatted_strings = [f\"{row['model']}: {row[col]}\" for _, row in sorted_series.iterrows()]\n",
-    "\n",
-    "        # Store the formatted strings in the new DataFrame\n",
-    "        new_df[col] = formatted_strings\n",
-    "\n",
-    "    return pd.DataFrame(new_df)"
    ],
    "metadata": {
     "collapsed": false,
